--- a/scss/_backgrounds.scss
+++ b/scss/_backgrounds.scss
@@ -1,9 +1,26 @@
+@use "sass:map";
+@use "sass:color";
 @use 'variables';
 @use 'links';
 @use 'gradients';
 
-@each $theme, $value in variables.$themes {
-    .fill.#{$theme} {
-        background-color: $value;
-    }
+@each $name, $theme in variables.$themes {
+
+    $primary: map.get($theme, "primary");
+    $text: map.get($theme, "text");
+
+    .#{$name}.fill.primary {
+        background-color: $primary;
+        color: $text;
+    } 
+
+    .#{$name}.fill.secondary {
+        @if color.blackness($primary) < 50% {
+            background-color: darken($primary, 5%);
+        }
+        @else {
+            background-color: lighten($primary, 5%);
+        }
+        color: $text;
+    } 
 }
