--- a/scss/_gradients.scss
+++ b/scss/_gradients.scss
@@ -1,3 +1,4 @@
+@use "sass:map";
 @use 'variables';
 @use 'offsets';
 @use 'shadow';
@@ -6,7 +7,7 @@
 
 @each $theme, $value in variables.$themes {
     %#{$theme}-gradient {
-        background: linear-gradient(135deg, variables.$alpha, darken($value, 15%) 25%, variables.$alpha);
+        background: linear-gradient(135deg, variables.$alpha, darken(map.get($value, "primary"), 15%) 25%, variables.$alpha);
     }
     
     %#{$theme}-gradient-hover-animation {
