--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -26,23 +26,27 @@ $black: #000000;
 $alpha: #ffffff00;
 $alpha-dark: #00000000;
 
-$themes: ("default": #f7f7f7, "dark": #080808);
+$themes: (
+    "default": (
+        "primary": #f7f7f7, 
+        "text": $black
+    ), 
+    "dark": ( 
+        "primary": #080808, 
+        "text": $white
+    )
+);
 
-@each $theme, $value in $themes {
-    .#{$theme} .primary {
-        background-color: $value;
-    } 
-    .#{$theme} .secondary {
-        background-color: darken($value, 15%);
-    } 
-    .#{$theme} .text {
-        @if color.blackness($value) > 50% {
-            color: white;
+@each $name, $theme in $themes {
+
+    $primary: map.get($theme, "primary");
+    $text: map.get($theme, "text");
+
+    p, span, a, h1, h2, h3, h4, h5, h6 {
+        &.#{$name}.text {
+            color: $text;
         }
-        @else {
-            color: black;
-        }
-    } 
+    }
 }
 
 %clickable {
