--- a/scss/_images.scss
+++ b/scss/_images.scss
@@ -3,8 +3,9 @@
 @use 'shadow';
 @use 'layout';
 @use 'z-index';
+@use 'box';
 
 .image {
     @extend %padding-3;
-    @extend .box;
+    @extend %box;
 }
