--- a/scss/_gradients.scss
+++ b/scss/_gradients.scss
@@ -8,7 +8,7 @@
 
 @each $name, $theme in variables.$themes {
     $primary: map.get($theme, "primary");
-    $text: map.get($theme, "text");
+    $text: map.get($theme, "text-colour");
 
     %#{$name}-gradient {
         @if color.blackness($primary) > 50% {
