--- a/scss/_backgrounds.scss
+++ b/scss/_backgrounds.scss
@@ -6,7 +6,7 @@
 
 @each $name, $theme in variables.$themes {
     $primary: map.get($theme, "primary");
-    $text: map.get($theme, "text");
+    $text: map.get($theme, "text-colour");
 
     .#{$name}.fill.primary {
         background-color: $primary;
