--- a/scss/_prototypes.scss
+++ b/scss/_prototypes.scss
@@ -1,9 +1,38 @@
 @use "sass:map";
 @use "sass:color";
 
+@mixin flex($direction, $justify, $align, $grow: 1) {
+    display: flex;
+    flex-direction: $direction;
+    justify-content: $justify;
+    align-items: $align;
+    flex-grow: $grow;
+}
+
+@mixin flex-column($justify, $align, $grow: 1) {
+    @include flex(column, $justify, $align, $grow);
+    height: 100%;
+}
+
+@mixin flex-row($justify, $align, $grow: 1) {
+    @include flex(row, $justify, $align, $grow);
+    width: 100%;
+}
+
+@mixin border-radius($radius: 0.25em) {
+    border: 0px;
+    border-radius: $radius;
+}
+
 @each $value in -1, 0, 1, 2, 3, 4, 5 {
     %z#{$value} {
         z-index: $value;
+    }
+}
+
+@each $value in 0, 1, 2, 3, 4, 5 {
+    %flex-grow-#{$value} {
+        flex-grow: #{$value};
     }
 }
 
@@ -11,7 +40,15 @@
     cursor: pointer;
 }
 
-@mixin border-radius($radius: 0.25em) {
-    border: 0px;
-    border-radius: $radius;
+%flex {
+    @include flex(column, center, center, 0);
 }
+
+%box {
+    @extend %shadow-1;
+    @extend %flex;
+    min-width: 5em;
+    min-height: 5em;
+    border-radius: 3px;
+}
+
