--- a/scss/_shadow.scss
+++ b/scss/_shadow.scss
@@ -1,5 +1,7 @@
+@use "sass:map";
+@use "sass:color";
 @use 'variables';
-@use 'offsets';
+@use 'prototypes';
 
 @each $value in 1, 2, 3, 4, 5 {
     %shadow-#{$value} {
