--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,7 +1,7 @@
+@use "sass:map";
+@use "sass:color";
 @use 'variables';
 @use 'prototypes';
-@use 'offsets';
-@use 'shadow';
 
 .flex, .center {
     @extend %flex;
