--- a/scss/_prototypes.scss
+++ b/scss/_prototypes.scss
@@ -1,5 +1,6 @@
 @use "sass:map";
 @use "sass:color";
+@use "variables";
 
 @mixin flex($direction, $justify, $align, $grow: 1) {
     display: flex;
